@@ -1,6 +1,12 @@
 2008-03-03  Alan D. Salewski  <ASalewski@signatureinfo.com>
 
-	* src/main/resources/htdocs/error.rock: Renamed 'error.roc' to 'error.rock'
+	Renamed 'error.roc' to 'error.rock':
+	* src/main/resources/htdocs/error.roc:  removed file
+	* src/main/resources/htdocs/error.rock: added file
+	* src/main/resources/htdocs/Makefile.am
+	(dist_htdocs_DATA): Changed 'error.roc' reference to 'error.rock'
+	(install-data-hook): New automake augmentation target that creates
+	  an 'error.roc' symlink to our installed 'error.rock' file
 
 	* src/main/perl/bin/bedrock-create-site.in
 	(maybe_copy_dist_error_dot_rock_or_die): new function
